// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PollutantStats initialization should render correctly 1`] = `
"<div className=\\"pollutant-stats\\">
  <strong>
    CO
  </strong>
  <div>
    <span>
      <h5>
        Value:
      </h5>
       
      <p>
        100
      </p>
    </span>
    <span>
      <h5>
        Pressure:
      </h5>
       
      <p>
        1000
         hPa
      </p>
    </span>
    <span>
      <h5>
        Precision:
      </h5>
       
      <p>
        32924
      </p>
    </span>
  </div>
</div>"
`;

exports[`PollutantStats initialization should render correctly 2`] = `
"<div className=\\"pollutant-stats\\">
  <strong>
    SO2
  </strong>
  <div>
    <span>
      <h5>
        Value:
      </h5>
       
      <p>
        132
      </p>
    </span>
    <span>
      <h5>
        Pressure:
      </h5>
       
      <p>
        2000
         hPa
      </p>
    </span>
    <span>
      <h5>
        Precision:
      </h5>
       
      <p>
        23234
      </p>
    </span>
  </div>
</div>"
`;

exports[`PollutantStats initialization should render correctly 3`] = `
"<div>
  <div>
    O3
  </div>
  <div>
    Value: 
    2349234
  </div>
</div>"
`;

exports[`PollutantStats initialization should render correctly 4`] = `
"<div>
  <div>
    NO2
  </div>
  <div>
    Value: 
    34539405
  </div>
  <div>
    Precision: 
    2345234
  </div>
</div>"
`;
